Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Afegir tot desactivat",
     "add-all-enabled": "Afegir tot activat",
     "add-extra-lines": "Afegir línies extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Afegir fitxer",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir nou plugin",
     "additional-text": "Text addicional",
@@ -1342,7 +1342,9 @@
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
     "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar per data desc",
+    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-desc": "Ordenar por referencia desc.",
     "source": "Font",
     "source-code": "Codi font",
     "special-account": "Compte especial",
