--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -1343,6 +1343,8 @@
     "sort": "Orden",
     "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-desc": "Ordenar por referencia desc.",
     "source": "Fuente",
     "source-code": "Código fuente",
     "special-account": "Cuenta especial",
