--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1343,6 +1343,8 @@
     "sort": "Order",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-desc": "Ordenar por referencia desc.",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Conto speciale",
