--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1343,6 +1343,8 @@
     "sort": "Orde",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-desc": "Ordenar por referencia desc.",
     "source": "Fuente",
     "source-code": "Codi font",
     "special-account": "Conte especial",
