Mejorada la compatibilidad de la nueva clase Where.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Add all disabled",
     "add-all-enabled": "Add all enabled",
     "add-extra-lines": "Add extra lines",
-    "add-file": "Añadir archivo",
+    "add-file": "Add file",
     "add-invoices": "Add invoices",
     "add-new-plugin": "Add new plugin",
     "additional-text": "Additional text",
@@ -1343,8 +1343,8 @@
     "sort": "Order",
     "sort-by-date-asc": "Sort by date asc.",
     "sort-by-date-desc": "Sort by date desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-asc": "Sort by reference asc.",
+    "sort-by-ref-desc": "Sort by reference desc.",
     "source": "Fuente",
     "source-code": "Source code",
     "special-account": "Special account",
