--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Engadir todo deshabilitado",
     "add-all-enabled": "Engadir todo activado",
     "add-extra-lines": "Engadir liñas extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Engadir arquivo",
     "add-invoices": "Engadir facturas",
     "add-new-plugin": "Engadir novo complemento",
     "additional-text": "Texto adicional",
@@ -1343,8 +1343,8 @@
     "sort": "Orde",
     "sort-by-date-asc": "Ordear por data asc.",
     "sort-by-date-desc": "Ordear por data desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-asc": "Ordear por referencia asc.",
+    "sort-by-ref-desc": "Ordear por referencia desc.",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
