--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1339,6 +1339,7 @@
     "sketch-invoice-warning": "Aquesta factura encara és un esbós. Feu-la oficial canviat el seu estat a emesa.",
     "small": "Petit",
     "smaller-than": "Menor que",
+    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
     "sort-by-date-asc": "Ordenar por fecha desc.",
