--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1339,6 +1339,7 @@
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Menut",
     "smaller-than": "Més menut que",
+    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Número de la Seguritat Social",
     "sort": "Orde",
     "sort-by-date-asc": "Ordenar por fecha desc.",
