Mejoradas las pantallas de error. Ahora se pueden desactivar los botones de desactivar plugins y reconstruir mediante la constante FS_DISABLE_DEPLOY_ACTIONS en el config.php

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -432,6 +432,7 @@
     "different-passwords": "Les claus no coincideixen %userNick%",
     "different-than": "Diferent que",
     "disable": "Desactivar",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "S'ha desactivat",
     "discharge-date": "Data d'emissió: %date%",
     "discount": "Descompte",
@@ -1467,6 +1468,7 @@
     "title-url": "Títol (URL)",
     "to": "Per",
     "to-refund": "A retornar",
+    "to-report": "Informar",
     "today": "Avui",
     "total": "Total",
     "total-amount": "Suma total",
