--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -432,6 +432,7 @@
     "different-passwords": "Passwörter stimmen nicht überein %1$s",
     "different-than": "Anders als",
     "disable": "deaktivieren",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Behindert",
     "discharge-date": "Entladedatum: 0",
     "discount": "Rabatt",
@@ -1467,6 +1468,7 @@
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "today",
     "total": "Gesamt",
     "total-amount": "total-amount",
