--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -432,6 +432,7 @@
     "different-passwords": "Passwords don't match for %userNick%",
     "different-than": "Different than",
     "disable": "Disable",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Disabled",
     "discharge-date": "Discharge date: %date%",
     "discount": "Discount",
@@ -1339,7 +1340,7 @@
     "sketch-invoice-warning": "This invoice is still a draft. Make it official by changing its status to issued.",
     "small": "Small",
     "smaller-than": "Smaller than",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "The SOAP extension is not enabled in PHP. Contact your hosting provider to activate it.",
     "social-security-number": "Social Security number",
     "sort": "Order",
     "sort-by-date-asc": "Sort by date asc.",
@@ -1467,6 +1468,7 @@
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "To refund",
+    "to-report": "Informar",
     "today": "Today",
     "total": "Total",
     "total-amount": "Total amount",
