--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -432,6 +432,7 @@
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Desactivado",
     "discharge-date": "Fecha de alta: %date%",
     "discount": "Descuento",
@@ -1467,6 +1468,7 @@
     "title-url": "Título (URL).",
     "to": "Para",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "Hoy.",
     "total": "Total",
     "total-amount": "Suma total",
