--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -432,6 +432,7 @@
     "different-passwords": "%userNick% erabiltzailearen pasahitzak ez dira berdinak",
     "different-than": "Honen ezberdina",
     "disable": "Ezgaitu",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Ezgaitua",
     "discharge-date": "Alta data: %date%",
     "discount": "Beherapena",
@@ -1467,6 +1468,7 @@
     "title-url": "Titulua (URL)",
     "to": "Nori",
     "to-refund": "Itzultzera",
+    "to-report": "Informar",
     "today": "Gaur",
     "total": "Totala",
     "total-amount": "Batuketa totala",
