--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -432,6 +432,7 @@
     "different-passwords": "Les mots de passe ne correspondent pas %userNick%",
     "different-than": "Différent de",
     "disable": "Désactiver",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "désactivé",
     "discharge-date": "Date de sortie: %date%",
     "discount": "Remise",
@@ -1467,6 +1468,7 @@
     "title-url": "Titre (URL)",
     "to": "Pour",
     "to-refund": "À rembourser",
+    "to-report": "Informar",
     "today": "Aujourd'hui",
     "total": "Total",
     "total-amount": "Montant total",
