--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -432,6 +432,7 @@
     "different-passwords": "Os contrasinais non coinciden para %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Desactivado",
     "discharge-date": "Data de alta: %date%",
     "discount": "Desconto",
@@ -1467,6 +1468,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "Hoxe",
     "total": "Total",
     "total-amount": "Suma total",
