--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -432,6 +432,7 @@
     "different-passwords": "Le password non corrispondono %1$s",
     "different-than": "Diverso da",
     "disable": "disattivare",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Disabilitato",
     "discharge-date": "Data di scarico: 0",
     "discount": "Sconto",
@@ -1467,6 +1468,7 @@
     "title-url": "Title URL",
     "to": "A",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "today",
     "total": "Totale",
     "total-amount": "total-amount",
