--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -432,6 +432,7 @@
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Desativado",
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
@@ -1467,6 +1468,7 @@
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "Hoje",
     "total": "Total",
     "total-amount": "total-amount",
