--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -432,6 +432,7 @@
     "different-passwords": "Les contrasenyes per a l'usuari %userNick% no coincidixen",
     "different-than": "Diferent de",
     "disable": "Desactivar",
+    "disable-plugins": "Desactivar plugins",
     "disabled": "Desactivat",
     "discharge-date": "Data d'alta: %date%",
     "discount": "Desconte",
@@ -1467,6 +1468,7 @@
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
+    "to-report": "Informar",
     "today": "Hui",
     "total": "Total",
     "total-amount": "Suma total",
