--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -357,6 +357,7 @@
     "dashboard-for": "Taffel der %company%",
     "data-source": "Datenquelle",
     "database": "Datenbank",
+    "database-error": "Error al conectar a la base de datos",
     "database-name-must-be-lowercase": "Der Dateiname muss in Kleinbuchstaben sein",
     "date": "Datum",
     "date-in": "Datum in",
