--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -357,6 +357,7 @@
     "dashboard-for": "Tablero de %company%",
     "data-source": "Origen de datos",
     "database": "Base de datos",
+    "database-error": "Error al conectar a la base de datos",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha de entrada",
