--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -357,6 +357,7 @@
     "dashboard-for": "Taboleiro de %company%",
     "data-source": "Datos de orixe",
     "database": "Base de datos",
+    "database-error": "Error al conectar a la base de datos",
     "database-name-must-be-lowercase": "O nome da base de datos debe ser en minúsculas",
     "date": "Data",
     "date-in": "Data en",
