--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -357,6 +357,7 @@
     "dashboard-for": "dashboard-for",
     "data-source": "Origin data",
     "database": "Database",
+    "database-error": "Error al conectar a la base de datos",
     "database-name-must-be-lowercase": "database-name-must-be-lowercase",
     "date": "data",
     "date-in": "Data in",
