--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -1379,8 +1379,8 @@
     "subaccount": "Subcuenta",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "La subcuenta %subAccountCode% pertenece a otro ejercicio.",
-    "subaccount-irpf": "Cuenta para retenciones",
-    "subaccount-irpf-creditor": "Cuenta del acreedor de impuesto a renta",
+    "subaccount-irpf": "Subcuenta de retenciones para ventas",
+    "subaccount-irpf-creditor": "Subcuenta de IRPF para compras",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
