- Asignado el valor predeterminado false al strict de las funciones del cronjob. - Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -357,7 +357,7 @@
     "dashboard-for": "Dashboard for %company%",
     "data-source": "Origin data",
     "database": "Database",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Error connecting to the database",
     "database-name-must-be-lowercase": "The database name must be lowercase",
     "date": "Date",
     "date-in": "Date in",
@@ -433,7 +433,7 @@
     "different-passwords": "Passwords don't match for %userNick%",
     "different-than": "Different than",
     "disable": "Disable",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Disable plugins",
     "disabled": "Disabled",
     "discharge-date": "Discharge date: %date%",
     "discount": "Discount",
@@ -1379,8 +1379,8 @@
     "subaccount": "Subaccount",
     "subaccount-bad-codcuenta": "The subaccount %codsubcuenta% has an incorrect account assigned.",
     "subaccount-belongs-other-year": "Sub-account %subAccountCode% belongs to another financial year.",
-    "subaccount-irpf": "Account for deductions",
-    "subaccount-irpf-creditor": "Account of PIT creditor",
+    "subaccount-irpf": "Deduction sub-account for sales",
+    "subaccount-irpf-creditor": "Deduction sub-account for purchases",
     "subaccount-not-found": "Subaccount %subAccountCode% not found.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "Profit and loss subaccount not found",
@@ -1469,7 +1469,7 @@
     "title-url": "Title URL",
     "to": "To",
     "to-refund": "To refund",
-    "to-report": "Informar",
+    "to-report": "Report",
     "today": "Today",
     "total": "Total",
     "total-amount": "Total amount",
