--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -357,7 +357,7 @@
     "dashboard-for": "Taboleiro de %company%",
     "data-source": "Datos de orixe",
     "database": "Base de datos",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Erro ó conectar á base de datos",
     "database-name-must-be-lowercase": "O nome da base de datos debe ser en minúsculas",
     "date": "Data",
     "date-in": "Data en",
@@ -1379,8 +1379,8 @@
     "subaccount": "Subcontas",
     "subaccount-bad-codcuenta": "A subconta %codsubcuenta% ten asignada unha conta incorrecta.",
     "subaccount-belongs-other-year": "A subconta %subAccountCode% pertence a outro ano fiscal.",
-    "subaccount-irpf": "Conta para retencións",
-    "subaccount-irpf-creditor": "Conta do acredor do IRPF",
+    "subaccount-irpf": "Subconta de retencións para ventas",
+    "subaccount-irpf-creditor": "Subconta de retencións para compras",
     "subaccount-not-found": "Subconta %subAccountCode% non atopada.",
     "subaccount-purchases": "Contas para compras",
     "subaccount-pyg-not-found": "Subconta de pérdidas e ganancias non atopada",
