Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -357,7 +357,7 @@
     "dashboard-for": "Tauler de %company%",
     "data-source": "Dades d'origen",
     "database": "Base de dades",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Error en connectar a la base de dades",
     "database-name-must-be-lowercase": "El nom de la base de dades ha de ser en minúscules",
     "date": "Data",
     "date-in": "Data d'entrada",
@@ -433,7 +433,7 @@
     "different-passwords": "Les claus no coincideixen %userNick%",
     "different-than": "Diferent que",
     "disable": "Desactivar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Desactivar els plugins",
     "disabled": "S'ha desactivat",
     "discharge-date": "Data d'emissió: %date%",
     "discount": "Descompte",
