Solucionado bug en EditSecuenciaDocumento.php

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -178,7 +178,7 @@
     "cant-assign-date-already-regularized": "Non se pode asignar a data %date% porque xa existe unha regularización de %tax% para ese período.",
     "cant-assing-subaccount-supplier": "Non se pode asociar a subconta para o provedor %supplierCode%",
     "cant-associate-customer-subaccount": "Non se puido asociar a subconta para o cliente %customerCode%",
-    "cant-change-accounting-entry-exercise": "Non se pode cambiar o exercicio do asento. Cre un novo.",
+    "cant-change-accounting-entry-exercise": "Non se pode cambiar o exercicio do asento. Cree un novo.",
     "cant-change-agent-in-settlement": "Non pode cambiar o axente. a comisión xa está liquidada",
     "cant-connect-database": "Imposible conectarse á base de datos",
     "cant-convert-to-innodb": "Imposible converter a táboa '%tableName%' to InnoDB. Imprescindible para FacturaScripts.",
@@ -636,7 +636,7 @@
     "general-concepts": "Conceptos xerais",
     "general-data": "Datos xerais",
     "generate": "Xerar",
-    "generate-accounting-entries": "Xerar asientos",
+    "generate-accounting-entries": "Xerar asentos",
     "generate-accounting-entry": "Xerar asento contable",
     "generate-doc-type": "Xerar tipo de documento",
     "generate-invoice": "Acción para crear facturas",
@@ -1236,7 +1236,7 @@
     "renumber-accounting": "Renumerar asentos",
     "renumber-accounting-error": "Produciuse un erro durante a renumeración de entradas no exercicio fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asentos completada",
-    "renumber-accounting-p": "Renumera os asientos por data, de menor a maior",
+    "renumber-accounting-p": "Renumera os asentos por data, de menor a maior",
     "renumber-invoices-p": "Renumera as facturas en base á data, de menor a maior",
     "renumber-invoices-success": "As facturas do exercicio '%exercise%' foron renumeradas correctamente",
     "repeat-new-password": "Repite o contrasinal",
