Solucionado bug al calcular el informe de impuestos cuando hay suplidos.

--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -170,6 +170,9 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de caché '%folderName%'",
     "calculate": "Calcular",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "Calendario",
     "can-not-open-zip-file": "No se puede abrir el archivo zip '%zipFile%'",
     "cancel": "Cancelar",
