--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -170,6 +170,9 @@
     "cache": "Cache",
     "cache-dir": "Cache-aren karpeta '%folderName%'",
     "calculate": "Kalkulatu",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "Egutegia",
     "can-not-open-zip-file": "Ezin da '%zipFile%' zip artxiboa ireki",
     "cancel": "Ezeztatu",
