--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -170,6 +170,9 @@
     "cache": "nascondiglio",
     "cache-dir": "Directory cache '0'",
     "calculate": "calculate",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "calendar",
     "can-not-open-zip-file": "Impossibile aprire il file zip '0'",
     "cancel": "Annulla",
