--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -170,6 +170,9 @@
     "cache": "Cache-Speicher",
     "cache-dir": "Cache-Verzeichnis '0'",
     "calculate": "kalkulieren",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "Kalendar",
     "can-not-open-zip-file": "Kann die Zip-Datei '0' nicht öffnen",
     "cancel": "Stornieren",
