--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -170,6 +170,9 @@
     "cache": "Cache",
     "cache-dir": "Cache répertoire '%folderName%'",
     "calculate": "Calculer",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "Calendrier",
     "can-not-open-zip-file": "Impossible d'ouvrir le fichier zip '%zipFile%'",
     "cancel": "Annuler",
