--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -170,6 +170,9 @@
     "cache": "Caché",
     "cache-dir": "Cartafol da caché \"% item%\"",
     "calculate": "Calcular",
+    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calendar": "Calendario",
     "can-not-open-zip-file": "Non podo abrir o ficheiro zip '%zipFile%'",
     "cancel": "Cancelar",
