Solucionado bug al obtener el nuevo ID de un archivo adjunto: en algunos casos daba uno ya existente.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -170,9 +170,9 @@
     "cache": "Caché",
     "cache-dir": "Cartafol da caché \"% item%\"",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Diferenza atopada ó calcular o neto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferenza atopada ó calcular o recargo de equivalencia. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferenza atopada ó calcular o total do IVE. %tax% VS %tax2%",
     "calendar": "Calendario",
     "can-not-open-zip-file": "Non podo abrir o ficheiro zip '%zipFile%'",
     "cancel": "Cancelar",
@@ -1551,7 +1551,7 @@
     "variants": "Variantes",
     "vat": "IVE",
     "vat-document": "Documento",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Excepción do IVE",
     "vat-number-is-short": "O número '%vat-number%' é demasiado corto",
     "vat-number-not-vies": "O número '%vat-number%' non está rexistrado no sistema VIES",
     "vat-regime": "Réxime do IVE",
