--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -170,9 +170,9 @@
     "cache": "Cache",
     "cache-dir": "Cache directory '%folderName%'",
     "calculate": "Calculate",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Difference found when calculating the net. %net% VS %net2%",
+    "calculated-surcharge-diff": "Difference found when calculating the equivalence surcharge. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Difference found when calculating the total VAT. %tax% VS %tax2%",
     "calendar": "Calendar",
     "can-not-open-zip-file": "Can't open zip file '%zipFile%'",
     "cancel": "Cancel",
