Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -170,9 +170,10 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de memòria cau '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Diferència trobada en calcular el net. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferència trobada en calcular el recàrrec d'equivalència. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferència trobada en calcular el total dIVA. %tax% VS %tax2%",
+    "calculation": "Càlcul",
     "calendar": "Calendari",
     "can-not-open-zip-file": "No es pot obrir el ficher zip '%zipFile%'",
     "cancel": "Cancel·lar",
@@ -460,7 +461,7 @@
     "documents-generated": "Documents generats",
     "domiciled": "Domiciliat",
     "done": "Realitzat",
-    "done-date": "Fecha finalización",
+    "done-date": "Data finalització",
     "dont-sell-above-pvp": "No vendre per sobre del PVP",
     "dont-sell-below-cost": "No vendre per sota del cost",
     "download": "Descarregar",
@@ -480,7 +481,7 @@
     "email": "Correu electrònic",
     "email-bcc": "Email amb Còpia Oculta",
     "email-cc": "Email amb Còpia",
-    "email-not-configured": "Email no configurat. Pots configurar l'email des del menú administrador, panell de control, preferències d'aplicació.",
+    "email-not-configured": "Email no configurat. Podeu configurar l'email des del menú administrador, panell de control, preferències d'aplicació.",
     "email-not-sent": "No enviat",
     "email-notification": "Notificació per email",
     "email-notification-not-exists": "Notificació de email %name% no trobada",
@@ -547,8 +548,8 @@
     "estimation-email-subject": "El seu pressupost %code%",
     "estimation-email-text": "Hola, li adjuntem el seu pressupost %code%",
     "estimations": "Pressupostos",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Esdeveniment",
+    "events": "Esdeveniments",
     "exceptions": "Excepcions",
     "excess": "En excés",
     "exclude-invalid": "Excloure invàlids",
@@ -571,7 +572,7 @@
     "export": "exportar",
     "export-bill": "Factura d'exportació",
     "extra-file": "Arxiu extra",
-    "failed": "Fallido",
+    "failed": "Fallit",
     "families": "Famílies",
     "family": "Família",
     "family-code": "Codi de família",
