--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -173,6 +173,7 @@
     "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
     "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculation": "Kalkulation",
     "calendar": "Kalendar",
     "can-not-open-zip-file": "Kann die Zip-Datei '0' nicht öffnen",
     "cancel": "Stornieren",
