--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -173,6 +173,7 @@
     "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
     "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculation": "Calcul",
     "calendar": "Calendrier",
     "can-not-open-zip-file": "Impossible d'ouvrir le fichier zip '%zipFile%'",
     "cancel": "Annuler",
