--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -173,6 +173,7 @@
     "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
     "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculation": "Càlcul",
     "calendar": "Calendari",
     "can-not-open-zip-file": "No es pot obrir el fitxer zip '%zipFile%'",
     "cancel": "Cancelar",
