Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -2,7 +2,7 @@
     "abbreviated": "Abreujat",
     "about": "Sobre",
     "accept": "Acceptar",
-    "accept-all": "Aceptar todo",
+    "accept-all": "Acceptar-ho tot",
     "accept-data": "Acceptar canvis o operació",
     "accept-privacy-policy": "Accepta la política de privacitat",
     "accepted": "Acceptat",
@@ -1345,12 +1345,12 @@
     "sketch-invoice-warning": "Aquesta factura encara és un esbós. Feu-la oficial canviat el seu estat a emesa.",
     "small": "Petit",
     "smaller-than": "Menor que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "L'extensió SOAP no està activada al PHP. Contacta amb el teu proveïdor de hosting per activar-la.",
     "social-security-number": "Nombre Seguretat Social",
     "sort": "Ordre",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordenar per data desc.",
     "sort-by-date-desc": "Ordenar per data desc",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "source": "Font",
     "source-code": "Codi font",
@@ -1588,7 +1588,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "write-a-message-here": "Escriu un missatge aquí",
     "x-column": "Columna X",
