Actualizadas las traducciones.

--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -403,8 +403,8 @@
     "delete-record": "Eliminar registro",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Nota de envio",
-    "delivery-note-email-subject": "Su albarán %code%",
-    "delivery-note-email-text": "Hola, le adjunto su albarán %code%",
+    "delivery-note-email-subject": "Su envío %code%",
+    "delivery-note-email-text": "Hola, adjunto nota de envío %code%",
     "delivery-notes": "Notas de Envio",
     "delivery-notes-button": "Env. Ptes:",
     "department": "Departamento",
